<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Overdraw"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="#A60000"
    android:padding="10dp">

  <ImageView
      android:id="@id/error_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@android:drawable/ic_menu_report_image"
      android:contentDescription="@string/dummy_description" />

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="5dp"
      android:orientation="vertical">

    <TextView
        android:id="@id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#fff"
        android:text="@string/error_unknown_title" />

    <TextView
        android:id="@id/error_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/error_unknown_message"
        android:singleLine="true"
        android:ellipsize="end" />
    
  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

      <Button
          android:id="@id/error_button_ok"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@android:string/ok" />

  </LinearLayout>

</LinearLayout>