<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RedditFragment" >

    <LinearLayout
        android:id="@id/error_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dp"
		android:background="@drawable/card_bg"
		android:orientation="vertical" >
            
		<TextView
	        android:id="@id/error_title"
	        android:text="@string/error_title"
	        android:paddingLeft="@dimen/text_block_side_padding"
	        android:paddingTop="@dimen/text_block_top_padding"
	        android:paddingRight="@dimen/text_block_side_padding"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAlignment="viewStart"
	        android:paddingStart="@dimen/text_block_side_padding"
	        android:paddingEnd="@dimen/text_block_side_padding"
	        style="@style/CardTitle" />
	          
       	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_marginBottom="14.0dip"
	        android:layout_marginLeft="@dimen/card_padding"
	        android:layout_marginRight="@dimen/card_padding">
	       
	        <TextView
	            android:id="@id/error_descr"
	            style="@style/CardText"
	            android:ellipsize="none"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/error_descr" />
	        
	   	</LinearLayout>
	    	
       	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" >
	
	        <ImageView
	            android:id="@id/error_image"
	            android:layout_width="fill_parent"
	            android:layout_height="200dp"
	            android:layout_gravity="center_horizontal"
	            android:scaleType="centerInside"
	            android:src="@drawable/icn_error_cloud" />
	
	    </LinearLayout>
	    
		<Button
	        android:id="@id/retry_button"
	        android:visibility="visible"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_retry"
	        android:gravity="center_vertical|center_horizontal|left"
	        style="@style/CardActionButtonWithIconNoTopDivider" />
	    
	</LinearLayout>
    
	<ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0px" >
    </ListView>
	
</LinearLayout>